Use file contents to figure out which type of blocklist we are dealing with in IP filter

BUG: 315239